nuclear and fly added

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script type="text/javascript" src="js/player.js"></script>
 	<script type="text/javascript" src="js/missile.js"></script>
 	<script type="text/javascript" src="js/nuclear.js"></script>
+	<script type="text/javascript" src="js/plane.js"></script>
 	<script type="text/javascript" src="js/terrain.js"></script>
 	<script type="text/javascript" src="js/smoke.js"></script>
 	<script type="text/javascript" src="js/spark.js"></script>
@@ -31,13 +32,10 @@
             <span>·ω·</span>
         </div>
         <div id="instruction">
-            <span>移动：← →</span>
-            <span>跳跃：Ctrl</span>
-            <span>发射导弹：Space</span>
-            <span>调整发射方向：↑ ↓</span>
-            <span>三连击：Z</span>
-            <span>增加50%攻击：X</span>
-            <span>增加20%攻击：C</span>
+            <span>MOVE：← →</span>
+            <span>JUMP：Ctrl</span>
+            <span>Attack：Space</span>
+            <span>Adjust：↑ ↓</span>
         </div>
     </div>
 
@@ -54,6 +52,8 @@
 	<audio id="bkfr" src="au/fire.wav" preload="auto" style="visibility:hidden"></audio>
 	<audio id="bkwk" src="au/walk.wav" preload="auto" style="visibility:hidden"></audio>
 	<audio id="bkdt" src="au/dirt1.wav" preload="auto" style="visibility:hidden"></audio>
+	<audio id="bkland" src="au/land.wav" preload="auto" style="visibility:hidden"></audio>
+	<audio id="bkfly" src="au/fly.mp3" preload="auto" style="visibility:hidden"></audio>
 	<audio id="bkpk" class="bkpk" src="au/pick.wav" preload="auto" style="visibility:hidden"></audio>
 	<audio id="bkpk1" class="bkpk" src="au/pick.wav" preload="auto" style="visibility:hidden"></audio>
 	<audio id="bkpk2" class="bkpk" src="au/pick.wav" preload="auto" style="visibility:hidden"></audio>
