--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                 </div>
                 <div id="winder"></div>
                 <div id="barer">
+					<div id="barerImg"></div>
+            	   <div id="toggledImg"></div>
+            	   <div id="forceIgrey"></div>
             	   <div id="forceI"></div>
                 </div>
             </div>
