add glimer, vibration

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src="js/plane.js"></script>
 	<script type="text/javascript" src="js/terrain.js"></script>
 	<script type="text/javascript" src="js/smoke.js"></script>
+	<script type="text/javascript" src="js/glimmer.js"></script>
 	<script type="text/javascript" src="js/spark.js"></script>
 	<script type="text/javascript" src="js/soul.js"></script>
 	<script type="text/javascript" src="js/peripheral.js"></script>
