--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link href="css/font.css" rel='stylesheet' type='text/css'>
 	<link href="css/widgetcss.css" rel='stylesheet' type='text/css'>
 
+	<title>
+		War of Worms
+	</title>
+
 	<script type="text/javascript" src="js/jquery/jquery-1.11.1.min.js"></script>
 	<script type="text/javascript" src="js/json/json2.js"></script>
 	<script type="text/javascript" src="js/definition.js"></script>
@@ -136,7 +140,7 @@
                 	<img id="5-map"class="map-preview" src="file/terrain/5/s.png"/>
                 </div>
                 <div class="map-preview-box">
-                	<img id="6-map" class="map-preview" src="resources/11.jpg"/>
+                	<img id="6-map" class="map-preview" src="file/terrain/6/s.png"/>
                 </div>
 
                 <div class="ok-return">
